--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-url: "https://clareapumami.github.io.git" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://clareapumami.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "Clare Apumami" # the name of your site, e.g. ACME Corp.
